--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ pandas>=2.2
 pyarrow>=15.0         # fast parquet/CSV parsing for Quest 3 logs
 torch>=2.1            # tensor operations
 typer>=0.9            # ergonomic CLI utilities
+playwright>=1.45      # browser automation for E2E upload test
+pytest-playwright>=0.5  # pytest plugin
